# MentorMind-ADS

./: README.md  makecsv.py
mentormind/: README.md  pyproject.toml  report.md
mentormind/knowledge/: students_data.csv
mentormind/src/mentormind/: crew.py  main.py
mentormind/src/mentormind/config/: agents.yaml  tasks.yaml
mentormindflows/: README.md  app.py  poem.txt
mentormindflows copy 2/: pyproject.toml
mentormindflows copy 2/src/mentormindflows/: main.py
mentormindflows copy 2/src/mentormindflows/crews/gmailcrew/tools/: credentials.json  token.json
mentormindflows copy 2/src/mentormindflows/crews/mentormind_crew/: careerguide_crew.py  mentormind_crew.py  peercomparision_crew.py  studyplanner_crew.py
mentormindflows copy 2/src/mentormindflows/crews/mentormind_crew/config/: agents.yaml  careerguide_agents.yaml  careerguide_tasks.yaml  peercomparison_agents.yaml  peercomparison_tasks.yaml  studyplanner_agents.yaml  studyplanner_tasks.yaml  tasks.yaml
mentormindflows copy 2/src/outputs/: career_guide.md  report.md  study_plan.md
mentormindflows copy 2/tests/: report1.md  study.md
mentormindflows copy/src/mentormindflows/: main.py
mentormindflows copy/src/mentormindflows/tools/: custom_tool.py  writeFile_tool.py
mentormindflows copy/src/outputs/: career_guide.md  peer_comparison.md  report.md  study_plan.md
mentormindflows/outputs/: career_guide.md
mentormindflows/src/mentormindflows/: main.py
mentormindflows/src/outputs/: peer_comparison.md  report.md  study_plan.md
mentormindflows/tests/outputs copy/: peer_comparison.md  report.md
(+13 files in other folders)
