[project]
name = "mentormind"
version = "0.1.0"
description = "MentorMind using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
mentormind = "mentormind.main:run"
run_crew = "mentormind.main:run"
train = "mentormind.main:train"
replay = "mentormind.main:replay"
test = "mentormind.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
