[project]
name = "mentormindflows"
version = "0.1.0"
description = "MentorMindFlows using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
]

[project.scripts]
kickoff = "mentormindflows.main:kickoff"
run_crew = "mentormindflows.main:kickoff"
plot = "mentormindflows.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
